CENG444/Project 2 (Lexer + Parser + RISCV Generator)/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> varDecls funDecls free_statements
Rule 2     funDecls -> empty
Rule 3     funDecls -> funDecls funDecl
Rule 4     free_statements -> empty
Rule 5     free_statements -> free_statements free_statement
Rule 6     funDecl -> FUN function
Rule 7     varDecl -> VAR identifier ASSIGN init ;
Rule 8     varDecl -> VAR identifier ;
Rule 9     free_statement -> error ;
Rule 10    free_statement -> error }
Rule 11    free_statement -> compoundStmt
Rule 12    free_statement -> simpleStmt ;
Rule 13    simpleStmt -> returnStmt
Rule 14    simpleStmt -> printStmt
Rule 15    simpleStmt -> asgnStmt
Rule 16    compoundStmt -> forStmt
Rule 17    compoundStmt -> whileStmt
Rule 18    compoundStmt -> ifStmt
Rule 19    statement -> block
Rule 20    statement -> free_statement
Rule 21    asgnStmt -> identifier [ aexpr ] ASSIGN expr
Rule 22    asgnStmt -> identifier ASSIGN expr
Rule 23    asgnStmt_opt -> empty
Rule 24    asgnStmt_opt -> asgnStmt
Rule 25    lexpr_opt -> empty
Rule 26    lexpr_opt -> lexpr
Rule 27    forStmt -> FOR ( asgnStmt_opt ; lexpr_opt ; asgnStmt_opt ) statement
Rule 28    returnStmt -> RETURN expr
Rule 29    whileStmt -> WHILE lexpr statement
Rule 30    varDecls -> empty
Rule 31    varDecls -> varDecls varDecl
Rule 32    statements -> empty
Rule 33    statements -> statements statement
Rule 34    block -> { varDecls statements }
Rule 35    printStmt -> PRINT expr
Rule 36    ifStmt -> IF lexpr statement ELSE statement
Rule 37    ifStmt -> IF lexpr statement
Rule 38    init -> [ arguments ]
Rule 39    init -> expr
Rule 40    expr -> sexpr
Rule 41    expr -> aexpr
Rule 42    expr -> lexpr
Rule 43    lexpr -> lterm
Rule 44    lexpr -> lexpr OR lterm
Rule 45    lterm -> lfact
Rule 46    lterm -> lterm AND lfact
Rule 47    lfact -> ( lexpr )
Rule 48    lfact -> NOT lfact
Rule 49    lfact -> # identifier
Rule 50    lfact -> # getVector
Rule 51    lfact -> # call
Rule 52    lfact -> FALSE
Rule 53    lfact -> TRUE
Rule 54    lfact -> cexpr
Rule 55    aexpr -> term
Rule 56    aexpr -> aexpr MINUS term
Rule 57    aexpr -> aexpr PLUS term
Rule 58    term -> fact
Rule 59    term -> term DIVIDE fact
Rule 60    term -> term TIMES fact
Rule 61    fact -> ( aexpr )
Rule 62    fact -> getVector
Rule 63    fact -> identifier
Rule 64    fact -> NUMBER
Rule 65    fact -> call
Rule 66    fact -> MINUS fact
Rule 67    cexpr -> aexpr GT aexpr
Rule 68    cexpr -> aexpr LT aexpr
Rule 69    cexpr -> aexpr NE aexpr
Rule 70    cexpr -> aexpr GE aexpr
Rule 71    cexpr -> aexpr LE aexpr
Rule 72    cexpr -> aexpr EQ aexpr
Rule 73    sexpr -> STRING
Rule 74    arguments -> arguments , expr
Rule 75    arguments -> expr
Rule 76    parameters -> parameters , identifier
Rule 77    parameters -> identifier
Rule 78    function -> identifier ( parameters ) block
Rule 79    function -> identifier ( ) block
Rule 80    call -> identifier ( arguments )
Rule 81    call -> identifier ( )
Rule 82    getVector -> identifier [ aexpr ]
Rule 83    identifier -> ID
Rule 84    empty -> <empty>

Terminals, with rules where they appear:

#                    : 49 50 51
(                    : 27 47 61 78 79 80 81
)                    : 27 47 61 78 79 80 81
,                    : 74 76
;                    : 7 8 9 12 27 27
AND                  : 46
ASSIGN               : 7 21 22
DIVIDE               : 59
ELSE                 : 36
EQ                   : 72
FALSE                : 52
FOR                  : 27
FUN                  : 6
GE                   : 70
GT                   : 67
ID                   : 83
IF                   : 36 37
LE                   : 71
LT                   : 68
MINUS                : 56 66
NE                   : 69
NOT                  : 48
NUMBER               : 64
OR                   : 44
PLUS                 : 57
PRINT                : 35
RETURN               : 28
STRING               : 73
TIMES                : 60
TRUE                 : 53
VAR                  : 7 8
WHILE                : 29
[                    : 21 38 82
]                    : 21 38 82
error                : 9 10
{                    : 34
}                    : 10 34

Nonterminals, with rules where they appear:

aexpr                : 21 41 56 57 61 67 67 68 68 69 69 70 70 71 71 72 72 82
arguments            : 38 74 80
asgnStmt             : 15 24
asgnStmt_opt         : 27 27
block                : 19 78 79
call                 : 51 65
cexpr                : 54
compoundStmt         : 11
empty                : 2 4 23 25 30 32
expr                 : 21 22 28 35 39 74 75
fact                 : 58 59 60 66
forStmt              : 16
free_statement       : 5 20
free_statements      : 1 5
funDecl              : 3
funDecls             : 1 3
function             : 6
getVector            : 50 62
identifier           : 7 8 21 22 49 63 76 77 78 79 80 81 82
ifStmt               : 18
init                 : 7
lexpr                : 26 29 36 37 42 44 47
lexpr_opt            : 27
lfact                : 45 46 48
lterm                : 43 44 46
parameters           : 76 78
printStmt            : 14
program              : 0
returnStmt           : 13
sexpr                : 40
simpleStmt           : 12
statement            : 27 29 33 36 36 37
statements           : 33 34
term                 : 55 56 57 59 60
varDecl              : 31
varDecls             : 1 31 34
whileStmt            : 17


state 0

    (0) S' -> . program
    (1) program -> . varDecls funDecls free_statements
    (30) varDecls -> . empty
    (31) varDecls -> . varDecls varDecl
    (84) empty -> .
    VAR             reduce using rule 84 (empty -> .)
    FUN             reduce using rule 84 (empty -> .)
    error           reduce using rule 84 (empty -> .)
    FOR             reduce using rule 84 (empty -> .)
    WHILE           reduce using rule 84 (empty -> .)
    IF              reduce using rule 84 (empty -> .)
    RETURN          reduce using rule 84 (empty -> .)
    PRINT           reduce using rule 84 (empty -> .)
    ID              reduce using rule 84 (empty -> .)
    $end            reduce using rule 84 (empty -> .)

    program                        shift and go to state 1
    varDecls                       shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .


state 2

    (1) program -> varDecls . funDecls free_statements
    (31) varDecls -> varDecls . varDecl
    (2) funDecls -> . empty
    (3) funDecls -> . funDecls funDecl
    (7) varDecl -> . VAR identifier ASSIGN init ;
    (8) varDecl -> . VAR identifier ;
    (84) empty -> .
    VAR             shift and go to state 7
    FUN             reduce using rule 84 (empty -> .)
    error           reduce using rule 84 (empty -> .)
    FOR             reduce using rule 84 (empty -> .)
    WHILE           reduce using rule 84 (empty -> .)
    IF              reduce using rule 84 (empty -> .)
    RETURN          reduce using rule 84 (empty -> .)
    PRINT           reduce using rule 84 (empty -> .)
    ID              reduce using rule 84 (empty -> .)
    $end            reduce using rule 84 (empty -> .)

    funDecls                       shift and go to state 4
    varDecl                        shift and go to state 5
    empty                          shift and go to state 6

state 3

    (30) varDecls -> empty .
    VAR             reduce using rule 30 (varDecls -> empty .)
    FUN             reduce using rule 30 (varDecls -> empty .)
    error           reduce using rule 30 (varDecls -> empty .)
    FOR             reduce using rule 30 (varDecls -> empty .)
    WHILE           reduce using rule 30 (varDecls -> empty .)
    IF              reduce using rule 30 (varDecls -> empty .)
    RETURN          reduce using rule 30 (varDecls -> empty .)
    PRINT           reduce using rule 30 (varDecls -> empty .)
    ID              reduce using rule 30 (varDecls -> empty .)
    $end            reduce using rule 30 (varDecls -> empty .)
    }               reduce using rule 30 (varDecls -> empty .)
    {               reduce using rule 30 (varDecls -> empty .)


state 4

    (1) program -> varDecls funDecls . free_statements
    (3) funDecls -> funDecls . funDecl
    (4) free_statements -> . empty
    (5) free_statements -> . free_statements free_statement
    (6) funDecl -> . FUN function
    (84) empty -> .
    FUN             shift and go to state 11
    error           reduce using rule 84 (empty -> .)
    FOR             reduce using rule 84 (empty -> .)
    WHILE           reduce using rule 84 (empty -> .)
    IF              reduce using rule 84 (empty -> .)
    RETURN          reduce using rule 84 (empty -> .)
    PRINT           reduce using rule 84 (empty -> .)
    ID              reduce using rule 84 (empty -> .)
    $end            reduce using rule 84 (empty -> .)

    free_statements                shift and go to state 8
    funDecl                        shift and go to state 9
    empty                          shift and go to state 10

state 5

    (31) varDecls -> varDecls varDecl .
    VAR             reduce using rule 31 (varDecls -> varDecls varDecl .)
    FUN             reduce using rule 31 (varDecls -> varDecls varDecl .)
    error           reduce using rule 31 (varDecls -> varDecls varDecl .)
    FOR             reduce using rule 31 (varDecls -> varDecls varDecl .)
    WHILE           reduce using rule 31 (varDecls -> varDecls varDecl .)
    IF              reduce using rule 31 (varDecls -> varDecls varDecl .)
    RETURN          reduce using rule 31 (varDecls -> varDecls varDecl .)
    PRINT           reduce using rule 31 (varDecls -> varDecls varDecl .)
    ID              reduce using rule 31 (varDecls -> varDecls varDecl .)
    $end            reduce using rule 31 (varDecls -> varDecls varDecl .)
    }               reduce using rule 31 (varDecls -> varDecls varDecl .)
    {               reduce using rule 31 (varDecls -> varDecls varDecl .)


state 6

    (2) funDecls -> empty .
    FUN             reduce using rule 2 (funDecls -> empty .)
    error           reduce using rule 2 (funDecls -> empty .)
    FOR             reduce using rule 2 (funDecls -> empty .)
    WHILE           reduce using rule 2 (funDecls -> empty .)
    IF              reduce using rule 2 (funDecls -> empty .)
    RETURN          reduce using rule 2 (funDecls -> empty .)
    PRINT           reduce using rule 2 (funDecls -> empty .)
    ID              reduce using rule 2 (funDecls -> empty .)
    $end            reduce using rule 2 (funDecls -> empty .)


state 7

    (7) varDecl -> VAR . identifier ASSIGN init ;
    (8) varDecl -> VAR . identifier ;
    (83) identifier -> . ID
    ID              shift and go to state 13

    identifier                     shift and go to state 12

state 8

    (1) program -> varDecls funDecls free_statements .
    (5) free_statements -> free_statements . free_statement
    (9) free_statement -> . error ;
    (10) free_statement -> . error }
    (11) free_statement -> . compoundStmt
    (12) free_statement -> . simpleStmt ;
    (16) compoundStmt -> . forStmt
    (17) compoundStmt -> . whileStmt
    (18) compoundStmt -> . ifStmt
    (13) simpleStmt -> . returnStmt
    (14) simpleStmt -> . printStmt
    (15) simpleStmt -> . asgnStmt
    (27) forStmt -> . FOR ( asgnStmt_opt ; lexpr_opt ; asgnStmt_opt ) statement
    (29) whileStmt -> . WHILE lexpr statement
    (36) ifStmt -> . IF lexpr statement ELSE statement
    (37) ifStmt -> . IF lexpr statement
    (28) returnStmt -> . RETURN expr
    (35) printStmt -> . PRINT expr
    (21) asgnStmt -> . identifier [ aexpr ] ASSIGN expr
    (22) asgnStmt -> . identifier ASSIGN expr
    (83) identifier -> . ID
    $end            reduce using rule 1 (program -> varDecls funDecls free_statements .)
    error           shift and go to state 15
    FOR             shift and go to state 24
    WHILE           shift and go to state 25
    IF              shift and go to state 26
    RETURN          shift and go to state 27
    PRINT           shift and go to state 28
    ID              shift and go to state 13

    free_statement                 shift and go to state 14
    compoundStmt                   shift and go to state 16
    simpleStmt                     shift and go to state 17
    forStmt                        shift and go to state 18
    whileStmt                      shift and go to state 19
    ifStmt                         shift and go to state 20
    returnStmt                     shift and go to state 21
    printStmt                      shift and go to state 22
    asgnStmt                       shift and go to state 23
    identifier                     shift and go to state 29

state 9

    (3) funDecls -> funDecls funDecl .
    FUN             reduce using rule 3 (funDecls -> funDecls funDecl .)
    error           reduce using rule 3 (funDecls -> funDecls funDecl .)
    FOR             reduce using rule 3 (funDecls -> funDecls funDecl .)
    WHILE           reduce using rule 3 (funDecls -> funDecls funDecl .)
    IF              reduce using rule 3 (funDecls -> funDecls funDecl .)
    RETURN          reduce using rule 3 (funDecls -> funDecls funDecl .)
    PRINT           reduce using rule 3 (funDecls -> funDecls funDecl .)
    ID              reduce using rule 3 (funDecls -> funDecls funDecl .)
    $end            reduce using rule 3 (funDecls -> funDecls funDecl .)


state 10

    (4) free_statements -> empty .
    error           reduce using rule 4 (free_statements -> empty .)
    FOR             reduce using rule 4 (free_statements -> empty .)
    WHILE           reduce using rule 4 (free_statements -> empty .)
    IF              reduce using rule 4 (free_statements -> empty .)
    RETURN          reduce using rule 4 (free_statements -> empty .)
    PRINT           reduce using rule 4 (free_statements -> empty .)
    ID              reduce using rule 4 (free_statements -> empty .)
    $end            reduce using rule 4 (free_statements -> empty .)


state 11

    (6) funDecl -> FUN . function
    (78) function -> . identifier ( parameters ) block
    (79) function -> . identifier ( ) block
    (83) identifier -> . ID
    ID              shift and go to state 13

    function                       shift and go to state 30
    identifier                     shift and go to state 31

state 12

    (7) varDecl -> VAR identifier . ASSIGN init ;
    (8) varDecl -> VAR identifier . ;
    ASSIGN          shift and go to state 32
    ;               shift and go to state 33


state 13

    (83) identifier -> ID .
    ASSIGN          reduce using rule 83 (identifier -> ID .)
    ;               reduce using rule 83 (identifier -> ID .)
    [               reduce using rule 83 (identifier -> ID .)
    (               reduce using rule 83 (identifier -> ID .)
    DIVIDE          reduce using rule 83 (identifier -> ID .)
    TIMES           reduce using rule 83 (identifier -> ID .)
    GT              reduce using rule 83 (identifier -> ID .)
    LT              reduce using rule 83 (identifier -> ID .)
    NE              reduce using rule 83 (identifier -> ID .)
    GE              reduce using rule 83 (identifier -> ID .)
    LE              reduce using rule 83 (identifier -> ID .)
    EQ              reduce using rule 83 (identifier -> ID .)
    MINUS           reduce using rule 83 (identifier -> ID .)
    PLUS            reduce using rule 83 (identifier -> ID .)
    )               reduce using rule 83 (identifier -> ID .)
    AND             reduce using rule 83 (identifier -> ID .)
    OR              reduce using rule 83 (identifier -> ID .)
    {               reduce using rule 83 (identifier -> ID .)
    error           reduce using rule 83 (identifier -> ID .)
    FOR             reduce using rule 83 (identifier -> ID .)
    WHILE           reduce using rule 83 (identifier -> ID .)
    IF              reduce using rule 83 (identifier -> ID .)
    RETURN          reduce using rule 83 (identifier -> ID .)
    PRINT           reduce using rule 83 (identifier -> ID .)
    ID              reduce using rule 83 (identifier -> ID .)
    ]               reduce using rule 83 (identifier -> ID .)
    ,               reduce using rule 83 (identifier -> ID .)


state 14

    (5) free_statements -> free_statements free_statement .
    error           reduce using rule 5 (free_statements -> free_statements free_statement .)
    FOR             reduce using rule 5 (free_statements -> free_statements free_statement .)
    WHILE           reduce using rule 5 (free_statements -> free_statements free_statement .)
    IF              reduce using rule 5 (free_statements -> free_statements free_statement .)
    RETURN          reduce using rule 5 (free_statements -> free_statements free_statement .)
    PRINT           reduce using rule 5 (free_statements -> free_statements free_statement .)
    ID              reduce using rule 5 (free_statements -> free_statements free_statement .)
    $end            reduce using rule 5 (free_statements -> free_statements free_statement .)


state 15

    (9) free_statement -> error . ;
    (10) free_statement -> error . }
    ;               shift and go to state 34
    }               shift and go to state 35


state 16

    (11) free_statement -> compoundStmt .
    error           reduce using rule 11 (free_statement -> compoundStmt .)
    FOR             reduce using rule 11 (free_statement -> compoundStmt .)
    WHILE           reduce using rule 11 (free_statement -> compoundStmt .)
    IF              reduce using rule 11 (free_statement -> compoundStmt .)
    RETURN          reduce using rule 11 (free_statement -> compoundStmt .)
    PRINT           reduce using rule 11 (free_statement -> compoundStmt .)
    ID              reduce using rule 11 (free_statement -> compoundStmt .)
    $end            reduce using rule 11 (free_statement -> compoundStmt .)
    ELSE            reduce using rule 11 (free_statement -> compoundStmt .)
    }               reduce using rule 11 (free_statement -> compoundStmt .)
    {               reduce using rule 11 (free_statement -> compoundStmt .)


state 17

    (12) free_statement -> simpleStmt . ;
    ;               shift and go to state 36


state 18

    (16) compoundStmt -> forStmt .
    error           reduce using rule 16 (compoundStmt -> forStmt .)
    FOR             reduce using rule 16 (compoundStmt -> forStmt .)
    WHILE           reduce using rule 16 (compoundStmt -> forStmt .)
    IF              reduce using rule 16 (compoundStmt -> forStmt .)
    RETURN          reduce using rule 16 (compoundStmt -> forStmt .)
    PRINT           reduce using rule 16 (compoundStmt -> forStmt .)
    ID              reduce using rule 16 (compoundStmt -> forStmt .)
    $end            reduce using rule 16 (compoundStmt -> forStmt .)
    ELSE            reduce using rule 16 (compoundStmt -> forStmt .)
    }               reduce using rule 16 (compoundStmt -> forStmt .)
    {               reduce using rule 16 (compoundStmt -> forStmt .)


state 19

    (17) compoundStmt -> whileStmt .
    error           reduce using rule 17 (compoundStmt -> whileStmt .)
    FOR             reduce using rule 17 (compoundStmt -> whileStmt .)
    WHILE           reduce using rule 17 (compoundStmt -> whileStmt .)
    IF              reduce using rule 17 (compoundStmt -> whileStmt .)
    RETURN          reduce using rule 17 (compoundStmt -> whileStmt .)
    PRINT           reduce using rule 17 (compoundStmt -> whileStmt .)
    ID              reduce using rule 17 (compoundStmt -> whileStmt .)
    $end            reduce using rule 17 (compoundStmt -> whileStmt .)
    ELSE            reduce using rule 17 (compoundStmt -> whileStmt .)
    }               reduce using rule 17 (compoundStmt -> whileStmt .)
    {               reduce using rule 17 (compoundStmt -> whileStmt .)


state 20

    (18) compoundStmt -> ifStmt .
    error           reduce using rule 18 (compoundStmt -> ifStmt .)
    FOR             reduce using rule 18 (compoundStmt -> ifStmt .)
    WHILE           reduce using rule 18 (compoundStmt -> ifStmt .)
    IF              reduce using rule 18 (compoundStmt -> ifStmt .)
    RETURN          reduce using rule 18 (compoundStmt -> ifStmt .)
    PRINT           reduce using rule 18 (compoundStmt -> ifStmt .)
    ID              reduce using rule 18 (compoundStmt -> ifStmt .)
    $end            reduce using rule 18 (compoundStmt -> ifStmt .)
    ELSE            reduce using rule 18 (compoundStmt -> ifStmt .)
    }               reduce using rule 18 (compoundStmt -> ifStmt .)
    {               reduce using rule 18 (compoundStmt -> ifStmt .)


state 21

    (13) simpleStmt -> returnStmt .
    ;               reduce using rule 13 (simpleStmt -> returnStmt .)


state 22

    (14) simpleStmt -> printStmt .
    ;               reduce using rule 14 (simpleStmt -> printStmt .)


state 23

    (15) simpleStmt -> asgnStmt .
    ;               reduce using rule 15 (simpleStmt -> asgnStmt .)


state 24

    (27) forStmt -> FOR . ( asgnStmt_opt ; lexpr_opt ; asgnStmt_opt ) statement
    (               shift and go to state 37


state 25

    (29) whileStmt -> WHILE . lexpr statement
    (43) lexpr -> . lterm
    (44) lexpr -> . lexpr OR lterm
    (45) lterm -> . lfact
    (46) lterm -> . lterm AND lfact
    (47) lfact -> . ( lexpr )
    (48) lfact -> . NOT lfact
    (49) lfact -> . # identifier
    (50) lfact -> . # getVector
    (51) lfact -> . # call
    (52) lfact -> . FALSE
    (53) lfact -> . TRUE
    (54) lfact -> . cexpr
    (67) cexpr -> . aexpr GT aexpr
    (68) cexpr -> . aexpr LT aexpr
    (69) cexpr -> . aexpr NE aexpr
    (70) cexpr -> . aexpr GE aexpr
    (71) cexpr -> . aexpr LE aexpr
    (72) cexpr -> . aexpr EQ aexpr
    (55) aexpr -> . term
    (56) aexpr -> . aexpr MINUS term
    (57) aexpr -> . aexpr PLUS term
    (58) term -> . fact
    (59) term -> . term DIVIDE fact
    (60) term -> . term TIMES fact
    (61) fact -> . ( aexpr )
    (62) fact -> . getVector
    (63) fact -> . identifier
    (64) fact -> . NUMBER
    (65) fact -> . call
    (66) fact -> . MINUS fact
    (82) getVector -> . identifier [ aexpr ]
    (83) identifier -> . ID
    (80) call -> . identifier ( arguments )
    (81) call -> . identifier ( )
    (               shift and go to state 41
    NOT             shift and go to state 42
    #               shift and go to state 43
    FALSE           shift and go to state 47
    TRUE            shift and go to state 48
    NUMBER          shift and go to state 54
    MINUS           shift and go to state 52
    ID              shift and go to state 13

    lexpr                          shift and go to state 38
    lterm                          shift and go to state 39
    lfact                          shift and go to state 40
    identifier                     shift and go to state 44
    getVector                      shift and go to state 45
    call                           shift and go to state 46
    cexpr                          shift and go to state 49
    aexpr                          shift and go to state 50
    term                           shift and go to state 51
    fact                           shift and go to state 53

state 26

    (36) ifStmt -> IF . lexpr statement ELSE statement
    (37) ifStmt -> IF . lexpr statement
    (43) lexpr -> . lterm
    (44) lexpr -> . lexpr OR lterm
    (45) lterm -> . lfact
    (46) lterm -> . lterm AND lfact
    (47) lfact -> . ( lexpr )
    (48) lfact -> . NOT lfact
    (49) lfact -> . # identifier
    (50) lfact -> . # getVector
    (51) lfact -> . # call
    (52) lfact -> . FALSE
    (53) lfact -> . TRUE
    (54) lfact -> . cexpr
    (67) cexpr -> . aexpr GT aexpr
    (68) cexpr -> . aexpr LT aexpr
    (69) cexpr -> . aexpr NE aexpr
    (70) cexpr -> . aexpr GE aexpr
    (71) cexpr -> . aexpr LE aexpr
    (72) cexpr -> . aexpr EQ aexpr
    (55) aexpr -> . term
    (56) aexpr -> . aexpr MINUS term
    (57) aexpr -> . aexpr PLUS term
    (58) term -> . fact
    (59) term -> . term DIVIDE fact
    (60) term -> . term TIMES fact
    (61) fact -> . ( aexpr )
    (62) fact -> . getVector
    (63) fact -> . identifier
    (64) fact -> . NUMBER
    (65) fact -> . call
    (66) fact -> . MINUS fact
    (82) getVector -> . identifier [ aexpr ]
    (83) identifier -> . ID
    (80) call -> . identifier ( arguments )
    (81) call -> . identifier ( )
    (               shift and go to state 41
    NOT             shift and go to state 42
    #               shift and go to state 43
    FALSE           shift and go to state 47
    TRUE            shift and go to state 48
    NUMBER          shift and go to state 54
    MINUS           shift and go to state 52
    ID              shift and go to state 13

    lexpr                          shift and go to state 55
    lterm                          shift and go to state 39
    lfact                          shift and go to state 40
    identifier                     shift and go to state 44
    getVector                      shift and go to state 45
    call                           shift and go to state 46
    cexpr                          shift and go to state 49
    aexpr                          shift and go to state 50
    term                           shift and go to state 51
    fact                           shift and go to state 53

state 27

    (28) returnStmt -> RETURN . expr
    (40) expr -> . sexpr
    (41) expr -> . aexpr
    (42) expr -> . lexpr
    (73) sexpr -> . STRING
    (55) aexpr -> . term
    (56) aexpr -> . aexpr MINUS term
    (57) aexpr -> . aexpr PLUS term
    (43) lexpr -> . lterm
    (44) lexpr -> . lexpr OR lterm
    (58) term -> . fact
    (59) term -> . term DIVIDE fact
    (60) term -> . term TIMES fact
    (45) lterm -> . lfact
    (46) lterm -> . lterm AND lfact
    (61) fact -> . ( aexpr )
    (62) fact -> . getVector
    (63) fact -> . identifier
    (64) fact -> . NUMBER
    (65) fact -> . call
    (66) fact -> . MINUS fact
    (47) lfact -> . ( lexpr )
    (48) lfact -> . NOT lfact
    (49) lfact -> . # identifier
    (50) lfact -> . # getVector
    (51) lfact -> . # call
    (52) lfact -> . FALSE
    (53) lfact -> . TRUE
    (54) lfact -> . cexpr
    (82) getVector -> . identifier [ aexpr ]
    (83) identifier -> . ID
    (80) call -> . identifier ( arguments )
    (81) call -> . identifier ( )
    (67) cexpr -> . aexpr GT aexpr
    (68) cexpr -> . aexpr LT aexpr
    (69) cexpr -> . aexpr NE aexpr
    (70) cexpr -> . aexpr GE aexpr
    (71) cexpr -> . aexpr LE aexpr
    (72) cexpr -> . aexpr EQ aexpr
    STRING          shift and go to state 60
    (               shift and go to state 61
    NUMBER          shift and go to state 54
    MINUS           shift and go to state 52
    NOT             shift and go to state 42
    #               shift and go to state 43
    FALSE           shift and go to state 47
    TRUE            shift and go to state 48
    ID              shift and go to state 13

    expr                           shift and go to state 56
    sexpr                          shift and go to state 57
    aexpr                          shift and go to state 58
    lexpr                          shift and go to state 59
    term                           shift and go to state 51
    lterm                          shift and go to state 39
    fact                           shift and go to state 53
    lfact                          shift and go to state 40
    getVector                      shift and go to state 45
    identifier                     shift and go to state 44
    call                           shift and go to state 46
    cexpr                          shift and go to state 49

state 28

    (35) printStmt -> PRINT . expr
    (40) expr -> . sexpr
    (41) expr -> . aexpr
    (42) expr -> . lexpr
    (73) sexpr -> . STRING
    (55) aexpr -> . term
    (56) aexpr -> . aexpr MINUS term
    (57) aexpr -> . aexpr PLUS term
    (43) lexpr -> . lterm
    (44) lexpr -> . lexpr OR lterm
    (58) term -> . fact
    (59) term -> . term DIVIDE fact
    (60) term -> . term TIMES fact
    (45) lterm -> . lfact
    (46) lterm -> . lterm AND lfact
    (61) fact -> . ( aexpr )
    (62) fact -> . getVector
    (63) fact -> . identifier
    (64) fact -> . NUMBER
    (65) fact -> . call
    (66) fact -> . MINUS fact
    (47) lfact -> . ( lexpr )
    (48) lfact -> . NOT lfact
    (49) lfact -> . # identifier
    (50) lfact -> . # getVector
    (51) lfact -> . # call
    (52) lfact -> . FALSE
    (53) lfact -> . TRUE
    (54) lfact -> . cexpr
    (82) getVector -> . identifier [ aexpr ]
    (83) identifier -> . ID
    (80) call -> . identifier ( arguments )
    (81) call -> . identifier ( )
    (67) cexpr -> . aexpr GT aexpr
    (68) cexpr -> . aexpr LT aexpr
    (69) cexpr -> . aexpr NE aexpr
    (70) cexpr -> . aexpr GE aexpr
    (71) cexpr -> . aexpr LE aexpr
    (72) cexpr -> . aexpr EQ aexpr
    STRING          shift and go to state 60
    (               shift and go to state 61
    NUMBER          shift and go to state 54
    MINUS           shift and go to state 52
    NOT             shift and go to state 42
    #               shift and go to state 43
    FALSE           shift and go to state 47
    TRUE            shift and go to state 48
    ID              shift and go to state 13

    expr                           shift and go to state 62
    sexpr                          shift and go to state 57
    aexpr                          shift and go to state 58
    lexpr                          shift and go to state 59
    term                           shift and go to state 51
    lterm                          shift and go to state 39
    fact                           shift and go to state 53
    lfact                          shift and go to state 40
    getVector                      shift and go to state 45
    identifier                     shift and go to state 44
    call                           shift and go to state 46
    cexpr                          shift and go to state 49

state 29

    (21) asgnStmt -> identifier . [ aexpr ] ASSIGN expr
    (22) asgnStmt -> identifier . ASSIGN expr
    [               shift and go to state 63
    ASSIGN          shift and go to state 64


state 30

    (6) funDecl -> FUN function .
    FUN             reduce using rule 6 (funDecl -> FUN function .)
    error           reduce using rule 6 (funDecl -> FUN function .)
    FOR             reduce using rule 6 (funDecl -> FUN function .)
    WHILE           reduce using rule 6 (funDecl -> FUN function .)
    IF              reduce using rule 6 (funDecl -> FUN function .)
    RETURN          reduce using rule 6 (funDecl -> FUN function .)
    PRINT           reduce using rule 6 (funDecl -> FUN function .)
    ID              reduce using rule 6 (funDecl -> FUN function .)
    $end            reduce using rule 6 (funDecl -> FUN function .)


state 31

    (78) function -> identifier . ( parameters ) block
    (79) function -> identifier . ( ) block
    (               shift and go to state 65


state 32

    (7) varDecl -> VAR identifier ASSIGN . init ;
    (38) init -> . [ arguments ]
    (39) init -> . expr
    (40) expr -> . sexpr
    (41) expr -> . aexpr
    (42) expr -> . lexpr
    (73) sexpr -> . STRING
    (55) aexpr -> . term
    (56) aexpr -> . aexpr MINUS term
    (57) aexpr -> . aexpr PLUS term
    (43) lexpr -> . lterm
    (44) lexpr -> . lexpr OR lterm
    (58) term -> . fact
    (59) term -> . term DIVIDE fact
    (60) term -> . term TIMES fact
    (45) lterm -> . lfact
    (46) lterm -> . lterm AND lfact
    (61) fact -> . ( aexpr )
    (62) fact -> . getVector
    (63) fact -> . identifier
    (64) fact -> . NUMBER
    (65) fact -> . call
    (66) fact -> . MINUS fact
    (47) lfact -> . ( lexpr )
    (48) lfact -> . NOT lfact
    (49) lfact -> . # identifier
    (50) lfact -> . # getVector
    (51) lfact -> . # call
    (52) lfact -> . FALSE
    (53) lfact -> . TRUE
    (54) lfact -> . cexpr
    (82) getVector -> . identifier [ aexpr ]
    (83) identifier -> . ID
    (80) call -> . identifier ( arguments )
    (81) call -> . identifier ( )
    (67) cexpr -> . aexpr GT aexpr
    (68) cexpr -> . aexpr LT aexpr
    (69) cexpr -> . aexpr NE aexpr
    (70) cexpr -> . aexpr GE aexpr
    (71) cexpr -> . aexpr LE aexpr
    (72) cexpr -> . aexpr EQ aexpr
    [               shift and go to state 67
    STRING          shift and go to state 60
    (               shift and go to state 61
    NUMBER          shift and go to state 54
    MINUS           shift and go to state 52
    NOT             shift and go to state 42
    #               shift and go to state 43
    FALSE           shift and go to state 47
    TRUE            shift and go to state 48
    ID              shift and go to state 13

    identifier                     shift and go to state 44
    init                           shift and go to state 66
    expr                           shift and go to state 68
    sexpr                          shift and go to state 57
    aexpr                          shift and go to state 58
    lexpr                          shift and go to state 59
    term                           shift and go to state 51
    lterm                          shift and go to state 39
    fact                           shift and go to state 53
    lfact                          shift and go to state 40
    getVector                      shift and go to state 45
    call                           shift and go to state 46
    cexpr                          shift and go to state 49

state 33

    (8) varDecl -> VAR identifier ; .
    VAR             reduce using rule 8 (varDecl -> VAR identifier ; .)
    FUN             reduce using rule 8 (varDecl -> VAR identifier ; .)
    error           reduce using rule 8 (varDecl -> VAR identifier ; .)
    FOR             reduce using rule 8 (varDecl -> VAR identifier ; .)
    WHILE           reduce using rule 8 (varDecl -> VAR identifier ; .)
    IF              reduce using rule 8 (varDecl -> VAR identifier ; .)
    RETURN          reduce using rule 8 (varDecl -> VAR identifier ; .)
    PRINT           reduce using rule 8 (varDecl -> VAR identifier ; .)
    ID              reduce using rule 8 (varDecl -> VAR identifier ; .)
    $end            reduce using rule 8 (varDecl -> VAR identifier ; .)
    }               reduce using rule 8 (varDecl -> VAR identifier ; .)
    {               reduce using rule 8 (varDecl -> VAR identifier ; .)


state 34

    (9) free_statement -> error ; .
    error           reduce using rule 9 (free_statement -> error ; .)
    FOR             reduce using rule 9 (free_statement -> error ; .)
    WHILE           reduce using rule 9 (free_statement -> error ; .)
    IF              reduce using rule 9 (free_statement -> error ; .)
    RETURN          reduce using rule 9 (free_statement -> error ; .)
    PRINT           reduce using rule 9 (free_statement -> error ; .)
    ID              reduce using rule 9 (free_statement -> error ; .)
    $end            reduce using rule 9 (free_statement -> error ; .)
    ELSE            reduce using rule 9 (free_statement -> error ; .)
    }               reduce using rule 9 (free_statement -> error ; .)
    {               reduce using rule 9 (free_statement -> error ; .)


state 35

    (10) free_statement -> error } .
    error           reduce using rule 10 (free_statement -> error } .)
    FOR             reduce using rule 10 (free_statement -> error } .)
